--- a/src/View/Home/index.html.twig
+++ b/src/View/Home/index.html.twig
@@ -1,5 +1,12 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    <h1>Hello Wilder !</h1>
+	<h1>Hello Wilder !</h1>
+{% endblock %}
+
+
+{% block map %}
+
+{% include 'Components/map.html.twig' %}
+
 {% endblock %}
